Секцию с отзывами сделал

--- a/reviews.html
+++ b/reviews.html
@@ -53,10 +53,10 @@
                             <img src="./img/reviews__page/1.png" alt="1" class="person--img">
                             <div class="person--info">
                                 <a href="#" class="person--name-link">
-                                    <div class="person--name"></div>
+                                    <div class="person--name">Иван Петрович</div>
                                     <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
                                 </a>
-                                <div class="person--service"></div>
+                                <div class="person--service">Съемка клипа</div>
                             </div>
                         </div>
                         <h3 class="person--title">Съемка клипа</h3>
@@ -68,13 +68,31 @@
                     </div>
                     <div class="main-reviews__block">
                         <div class="reviews__person--header">
+                            <img src="./img/reviews__page/3.png" alt="3" class="person--img">
+                            <div class="person--info">
+                                <a href="#" class="person--name-link">
+                                    <div class="person--name">Лиза Сидорова</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
+                                </a>
+                                <div class="person--service">Съемка свадьбы</div>
+                            </div>
+                        </div>
+                        <h3 class="person--title">Свадебная съемка.</h3>
+                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                            несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
+                            оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
+                            использовали небезизвестный универсальный код речей. </p>
+                        <time class="person--time">Ноябрь 2019</time>
+                    </div>
+                    <div class="main-reviews__block">
+                        <div class="reviews__person--header">
                             <img src="./img/reviews__page/2.png" alt="2" class="person--img">
                             <div class="person--info">
                                 <a href="#" class="person--name-link">
-                                    <div class="person--name"></div>
+                                    <div class="person--name">Екатерина Жмых</div>
                                     <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
                                 </a>
-                                <div class="person--service"></div>
+                                <div class="person--service">Студийная съемка</div>
                             </div>
                         </div>
                         <h3 class="person--title">Очень понравилась работа в студии.</h3>
@@ -88,31 +106,13 @@
                     </div>
                     <div class="main-reviews__block">
                         <div class="reviews__person--header">
-                            <img src="./img/reviews__page/3.png" alt="3" class="person--img">
-                            <div class="person--info">
-                                <a href="#" class="person--name-link">
-                                    <div class="person--name"></div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
-                                </a>
-                                <div class="person--service"></div>
-                            </div>
-                        </div>
-                        <h3 class="person--title">Свадебная съемка.</h3>
-                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
-                            несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
-                            оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
-                            использовали небезизвестный универсальный код речей. </p>
-                        <time class="person--time">Ноябрь 2019</time>
-                    </div>
-                    <div class="main-reviews__block">
-                        <div class="reviews__person--header">
                             <img src="./img/reviews__page/4.png" alt="4" class="person--img">
                             <div class="person--info">
                                 <a href="#" class="person--name-link">
-                                    <div class="person--name"></div>
+                                    <div class="person--name">Антон Игоревич</div>
                                     <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
                                 </a>
-                                <div class="person--service"></div>
+                                <div class="person--service">Реклама</div>
                             </div>
                         </div>
                         <h3 class="person--title">Заказывал съемку рекламы. И не пожалел!</h3>
@@ -138,33 +138,7 @@
             </div>
         </main>
 
-        <section class="partners">
-            <div class="container">
-                <h3 class="partners__title">Партнеры</h3>
-                <div class="partners__blocks">
-                    <div class="partners__block">
-                        <a href="#" class="partner__link"><img src="./icons/services__page/divico.png" alt="divico"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/ds.png" alt="ds"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/park.png" alt="park"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/zvibes.png" alt="zvibes"
-                                class="partner__img"></a>
-                    </div>
-                    <div class="partners__block">
-                        <a href="#" class="partner__link"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/zavod.png" alt="zavod"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/pixel.png" alt="pixel"
-                                class="partner__img"></a>
-                        <a href="#" class="partner__link"><img src="./icons/services__page/expotv.png" alt="expotv"
-                                class="partner__img"></a>
-                    </div>
-                </div>
-            </div>
-        </section>
+      section.
 
 
         <footer class="footer">
