Почти доделал форму

--- a/reviews.html
+++ b/reviews.html
@@ -138,7 +138,75 @@
             </div>
         </main>
 
-      section.
+        <section class="section-sale">
+            <div class="container">
+                <h3 class="section-sale--title">Скидка <span>20%</span> на</h3>
+                <h3 class="section-sale--title">съемку мероприятий</h3>
+            </div>
+        </section>
+
+        <section class="section-feedback">
+            <div class="container">
+                <h2 class="give-feedback-title">Оставьте отзыв</h2>
+                <form class="form">
+                    <div class="form__row">
+                        <input type="text" placeholder="ФИО" class="form__input">
+                        <input type="text" placeholder="Ссылка на профиль VK" class="form__input">
+                    </div>
+                    <div class="form__row">
+                        <textarea class="form__input form__input--textarea"
+                            placeholder="Напишите свой честный отзыв ;)"></textarea>
+                    </div>
+                    <div class="form__controls">
+                        <div class="form__controls-title">Какими услугами компании вы пользуетесь?</div>
+                        <ul class="controls">
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Съемка клипа</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Съемка рекламы</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Съемка свадьбы</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Студийная съемка</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Никакими</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Видео клип</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Другое</div>
+                                </label>
+                            </li>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+        </section>
 
 
         <footer class="footer">
