Анимировал welcome__page

--- a/welcome.html
+++ b/welcome.html
@@ -14,8 +14,10 @@
 <body>
     <div class="welcome">
         <div class="welcome__container">
-            <img class="welcome__logo" src="./logo/welcome__page/logo.png" alt="logo">
-            <a class="btn-welcome" href="./index.html">Войти</a>
+            <div class="welcome__block">
+                <img class="welcome__logo" src="./logo/welcome__page/logo.png" alt="logo">
+                <a class="btn-welcome" href="./index.html">Войти</a>
+            </div>
         </div>
     </div>
 </body>
