На все :hover навесил анимацию

--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
         <section class="top-line">
             <header class="header">
                 <div class="container">
-                    <a href="#" class="logo">
+                    <a href="./index.html" class="logo">
                         <img src="./logo/logo.png" alt="video production" class="logo__img">
                     </a>
                     <nav class="menu">
