Сделал выпадающее меню

--- a/reviews.html
+++ b/reviews.html
@@ -28,7 +28,15 @@
                     </nav>
                     <address class="contacts">
                         <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                        <div class="contacts__dropdown-title">График работы</div>
+                        <div class="dropdown">
+                            <a class="contacts__dropdown-title">График работы</a>
+                            <div class="dropdown__menu">
+                                <ul class="dropdown__list">
+                                    <li class="dropdown__item"><span>пн-вс: 09:00 - 20:00</span></li>
+                                    <li class="dropdown__item">Обед: 14:00-14:30</li>
+                                </ul>
+                            </div>
+                        </div>
                     </address>
                 </div>
             </header>
