--- a/services.html
+++ b/services.html
@@ -21,15 +21,23 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="./index.html"
-                                    class="menu__link">Главная</a></li>
-                            <li class="menu__item menu__item_active"><a href="./services.html" class="menu__link">Услуги</a></li>
+                            <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a></li>
+                            <li class="menu__item menu__item_active"><a href="./services.html"
+                                    class="menu__link">Услуги</a></li>
                             <li class="menu__item"><a href="./reviews.html" class="menu__link">Отзывы</a></li>
                         </ul>
                     </nav>
                     <address class="contacts">
                         <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                        <div class="contacts__dropdown-title">График работы</div>
+                        <div class="dropdown">
+                            <a class="contacts__dropdown-title">График работы</a>
+                            <div class="dropdown__menu">
+                                <ul class="dropdown__list">
+                                    <li class="dropdown__item"><span>пн-вс: 09:00 - 20:00</span></li>
+                                    <li class="dropdown__item">Обед: 14:00-14:30</li>
+                                </ul>
+                            </div>
+                        </div>
                     </address>
                 </div>
             </header>
@@ -102,7 +110,7 @@
             <div class="container">
                 <h3 class="partners__title">Партнеры</h3>
                 <div class="partners__blocks">
-                   <div class="partners__block">
+                    <div class="partners__block">
                         <a href="#" class="partner__link"><img src="./icons/services__page/divico.png" alt="divico"
                                 class="partner__img"></a>
                         <a href="#" class="partner__link"><img src="./icons/services__page/ds.png" alt="ds"
@@ -111,7 +119,7 @@
                                 class="partner__img"></a>
                         <a href="#" class="partner__link"><img src="./icons/services__page/zvibes.png" alt="zvibes"
                                 class="partner__img"></a>
-                   </div>
+                    </div>
                     <div class="partners__block">
                         <a href="#" class="partner__link"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
                                 class="partner__img"></a>
