Отзывы - perfectpixel - галочка

--- a/reviews.html
+++ b/reviews.html
@@ -166,7 +166,7 @@
                             placeholder="Напишите свой честный отзыв ;)"></textarea>
                     </div>
                     <div class="form__controls">
-                        <div class="form__controls-title">Какими услугами компании вы пользуетесь?</div>
+                        <div class="form__controls-title">Какими услугами компании пользуетесь?</div>
                         <ul class="controls">
                             <li class="controls__item">
                                 <label class="controls__elem">
