Внес правки касательно именования модификаторов
именовал до этого неправильно. Было, как пример "lorem_active", теперь "lorem--active"

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="paginator">
                             <div class="paginator__display">Страница 1 из 7</div>
                             <ul class="paginator__list">
-                                <li class="paginator__item paginator__item_active">1</li>
+                                <li class="paginator__item paginator__item--active">1</li>
                                 <li class="paginator__item">2</li>
                                 <li class="paginator__item">3</li>
                                 <li class="paginator__item">4</li>
