--- a/reviews.html
+++ b/reviews.html
@@ -134,7 +134,7 @@
                 <div class="paginator">
                     <div class="paginator__display paginator__item-black">Страница 1 из 7</div>
                     <ul class="paginator__list">
-                        <li class="paginator__item paginator__item-black paginator__item_active">1</li>
+                        <li class="paginator__item paginator__item-black paginator__item--active">1</li>
                         <li class="paginator__item paginator__item-black">2</li>
                         <li class="paginator__item paginator__item-black">3</li>
                         <li class="paginator__item paginator__item-black">4</li>
@@ -148,8 +148,8 @@
 
         <section class="section-sale">
             <div class="container">
-                <h3 class="section-sale--title">Скидка <span>20%</span> на</h3>
-                <h3 class="section-sale--title">съемку мероприятий</h3>
+                <h3 class="section-sale--title">Скидка <span>20%</span></h3>
+                <h3 class="section-sale--title">на съемку мероприятий</h3>
             </div>
         </section>
 
