--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
                 <div class="paginator">
                     <div class="paginator__display paginator__item-black">Страница 1 из 7</div>
                     <ul class="paginator__list">
-                        <li class="paginator__item paginator__item-black paginator__item_active">1</li>
+                        <li class="paginator__item paginator__item-black paginator__item--active">1</li>
                         <li class="paginator__item paginator__item-black">2</li>
                         <li class="paginator__item paginator__item-black">3</li>
                         <li class="paginator__item paginator__item-black">4</li>
