--- a/reviews.html
+++ b/reviews.html
@@ -46,6 +46,7 @@
                 <nav class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item"><a href="./index.html">Главная</a></li>
+                        <li class="breadcrumbs__item-line">&nbsp;/&nbsp;</li>
                         <li class="breadcrumbs__item breadcrumbs__item--active" aria-current="page"><a
                                 href="./services.html">Отзывы</a></li>
                     </ul>
