--- a/reviews.html
+++ b/reviews.html
@@ -149,8 +149,7 @@
 
         <section class="section-sale">
             <div class="container">
-                <h3 class="section-sale--title">Скидка <span>20%</span></h3>
-                <h3 class="section-sale--title">на съемку мероприятий</h3>
+                <h3 class="section-sale--title">Скидка <span>20%</span><br>на съемку мероприятий</h3>
             </div>
         </section>
 
