Внес правки касательно логотипа
До этого у него не было высоты и был баг, что под ним активировался cursor pointer. Добавил фиксированный размер логотипу

--- a/services.html
+++ b/services.html
@@ -47,6 +47,7 @@
                 <nav class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item"><a href="./index.html">Главная</a></li>
+                        <li class="breadcrumbs__item-line">&nbsp;/&nbsp;</li>
                         <li class="breadcrumbs__item breadcrumbs__item--active" aria-current="page"><a
                                 href="./services.html">Услуги</a></li>
                     </ul>
