теперь недоБЭМ, полноценный БЭМ :)
Исправил наименование классов на нормальное (по БЭМ)

--- a/reviews.html
+++ b/reviews.html
@@ -56,92 +56,92 @@
 
         <main class="main-reviews">
             <div class="container">
-                <div class="main-reviews__blocks">
-                    <div class="main-reviews__block">
-                        <div class="reviews__person--header">
-                            <img src="./img/reviews__page/1.png" alt="1" class="person--img">
-                            <div class="person--info">
-                                <a href="#" class="person--name-link">
-                                    <div class="person--name">Иван Петрович</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
+                <div class="main-reviews__feedbacks">
+                    <div class="main-reviews__feedback">
+                        <div class="feedback__header">
+                            <img src="./img/reviews__page/1.png" alt="1" class="header__img">
+                            <div class="header__person-info">
+                                <a href="#" class="person-info__name-link">
+                                    <div class="person-info__name">Иван Петрович</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
                                 </a>
-                                <div class="person--service">Съемка клипа</div>
+                                <div class="person-info__service">Съемка клипа</div>
                             </div>
                         </div>
-                        <h3 class="person--title">Съемка клипа</h3>
-                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                        <h3 class="feedback__title">Съемка клипа</h3>
+                        <p class="feedback__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
                             несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
                             оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
                             использовали небезизвестный универсальный код речей. </p>
-                        <time class="person--time">Ноябрь 2019</time>
+                        <time class="feedback__time">Ноябрь 2019</time>
                     </div>
-                    <div class="main-reviews__block">
-                        <div class="reviews__person--header">
-                            <img src="./img/reviews__page/3.png" alt="3" class="person--img">
-                            <div class="person--info">
-                                <a href="#" class="person--name-link">
-                                    <div class="person--name">Лиза Сидорова</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
+                    <div class="main-reviews__feedback">
+                        <div class="feedback__header">
+                            <img src="./img/reviews__page/3.png" alt="3" class="header__img">
+                            <div class="header__person-info">
+                                <a href="#" class="person-info__name-link">
+                                    <div class="person-info__name">Лиза Сидорова</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
                                 </a>
-                                <div class="person--service">Съемка свадьбы</div>
+                                <div class="person-info__service">Съемка свадьбы</div>
                             </div>
                         </div>
-                        <h3 class="person--title">Свадебная съемка.</h3>
-                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                        <h3 class="feedback__title">Свадебная съемка.</h3>
+                        <p class="feedback__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
                             несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
                             оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
                             использовали небезизвестный универсальный код речей. </p>
-                        <time class="person--time">Ноябрь 2019</time>
+                        <time class="feedback__time">Ноябрь 2019</time>
                     </div>
-                    <div class="main-reviews__block">
-                        <div class="reviews__person--header">
-                            <img src="./img/reviews__page/2.png" alt="2" class="person--img">
-                            <div class="person--info">
-                                <a href="#" class="person--name-link">
-                                    <div class="person--name">Екатерина Жмых</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
+                    <div class="main-reviews__feedback">
+                        <div class="feedback__header">
+                            <img src="./img/reviews__page/2.png" alt="2" class="header__img">
+                            <div class="header__person-info">
+                                <a href="#" class="person-info__name-link">
+                                    <div class="person-info__name">Екатерина Жмых</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
                                 </a>
-                                <div class="person--service">Студийная съемка</div>
+                                <div class="person-info__service">Студийная съемка</div>
                             </div>
                         </div>
-                        <h3 class="person--title">Очень понравилась работа в студии.</h3>
-                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                        <h3 class="feedback__title">Очень понравилась работа в студии.</h3>
+                        <p class="feedback__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
                             несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
                             оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
                             использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным
                             образом от двух до десяти предложений в абзаце, что позволяет сделать текст более
                             привлекательным и живым для визуально-слухового восприятия.</p>
-                        <time class="person--time">Ноябрь 2019</time>
+                        <time class="feedback__time">Ноябрь 2019</time>
                     </div>
-                    <div class="main-reviews__block">
-                        <div class="reviews__person--header">
-                            <img src="./img/reviews__page/4.png" alt="4" class="person--img">
-                            <div class="person--info">
-                                <a href="#" class="person--name-link">
-                                    <div class="person--name">Антон Игоревич</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person--social">
+                    <div class="main-reviews__feedback">
+                        <div class="feedback__header">
+                            <img src="./img/reviews__page/4.png" alt="4" class="header__img">
+                            <div class="header__person-info">
+                                <a href="#" class="person-info__name-link">
+                                    <div class="person-info__name">Антон Игоревич</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
                                 </a>
-                                <div class="person--service">Реклама</div>
+                                <div class="person-info__service">Реклама</div>
                             </div>
                         </div>
-                        <h3 class="person--title">Заказывал съемку рекламы. И не пожалел!</h3>
-                        <p class="person--text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                        <h3 class="feedback__title">Заказывал съемку рекламы. И не пожалел!</h3>
+                        <p class="feedback__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
                             несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему
                             оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
                             использовали небезизвестный универсальный код речей.</p>
-                        <time class="person--time">Ноябрь 2019</time>
+                        <time class="feedback__time">Ноябрь 2019</time>
                     </div>
                 </div>
                 <div class="paginator">
-                    <div class="paginator__display paginator__item-black">Страница 1 из 7</div>
+                    <div class="paginator__display paginator__item--black">Страница 1 из 7</div>
                     <ul class="paginator__list">
-                        <li class="paginator__item paginator__item-black paginator__item--active">1</li>
-                        <li class="paginator__item paginator__item-black">2</li>
-                        <li class="paginator__item paginator__item-black">3</li>
-                        <li class="paginator__item paginator__item-black">4</li>
-                        <li class="paginator__item paginator__item-black">5</li>
-                        <li class="paginator__item paginator__item-black">6</li>
-                        <li class="paginator__item paginator__item-black">7</li>
+                        <li class="paginator__item paginator__item--black paginator__item--active">1</li>
+                        <li class="paginator__item paginator__item--black">2</li>
+                        <li class="paginator__item paginator__item--black">3</li>
+                        <li class="paginator__item paginator__item--black">4</li>
+                        <li class="paginator__item paginator__item--black">5</li>
+                        <li class="paginator__item paginator__item--black">6</li>
+                        <li class="paginator__item paginator__item--black">7</li>
                     </ul>
                 </div>
             </div>
@@ -149,13 +149,13 @@
 
         <section class="section-sale">
             <div class="container">
-                <h3 class="section-sale--title">Скидка <span>20%</span><br>на съемку мероприятий</h3>
+                <h3 class="section-sale__title">Скидка <span>20%</span><br>на съемку мероприятий</h3>
             </div>
         </section>
 
         <section class="section-feedback">
             <div class="container">
-                <h2 class="give-feedback-title">Оставьте отзыв</h2>
+                <h2 class="section-feedback__give-title">Оставьте отзыв</h2>
                 <form class="form">
                     <div class="form__row">
                         <input type="text" placeholder="ФИО" class="form__input">
