--- a/services.html
+++ b/services.html
@@ -93,15 +93,15 @@
                     </div>
                 </div>
                 <div class="paginator">
-                    <div class="paginator__display paginator__item-black">Страница 1 из 7</div>
+                    <div class="paginator__display paginator__item--black">Страница 1 из 7</div>
                     <ul class="paginator__list">
-                        <li class="paginator__item paginator__item-black paginator__item--active">1</li>
-                        <li class="paginator__item paginator__item-black">2</li>
-                        <li class="paginator__item paginator__item-black">3</li>
-                        <li class="paginator__item paginator__item-black">4</li>
-                        <li class="paginator__item paginator__item-black">5</li>
-                        <li class="paginator__item paginator__item-black">6</li>
-                        <li class="paginator__item paginator__item-black">7</li>
+                        <li class="paginator__item paginator__item--black paginator__item--active">1</li>
+                        <li class="paginator__item paginator__item--black">2</li>
+                        <li class="paginator__item paginator__item--black">3</li>
+                        <li class="paginator__item paginator__item--black">4</li>
+                        <li class="paginator__item paginator__item--black">5</li>
+                        <li class="paginator__item paginator__item--black">6</li>
+                        <li class="paginator__item paginator__item--black">7</li>
                     </ul>
                 </div>
             </div>
